Make first column show up correctly on IE8

--- a/css/wishlist.css
+++ b/css/wishlist.css
@@ -394,7 +394,7 @@ div.videopage div.threecolumn.column1 {
 }
 
 .ie8 div.videopage div.threecolumn.column1 {
-	top: 200px;
+	top: 66px;
 }
 
 div.videopage div.threecolumn.column2 {
